[gd_scene load_steps=4 format=3 uid="uid://coqv3txlbln04"]

[ext_resource type="Script" path="res://src/card_selection_button.gd" id="1_34s8k"]
[ext_resource type="Texture2D" uid="uid://bwc6a0nltsok6" path="res://assets/Cards/ArmBarCardSprite.png" id="1_la3s1"]
[ext_resource type="FontFile" uid="uid://c5hgn1rhtkqud" path="res://assets/Small_Pixel_Font.ttf" id="2_4rrfw"]

[node name="CardSelectionButton" type="Control"]
custom_minimum_size = Vector2(110, 166)
layout_mode = 3
anchors_preset = 0
offset_right = 110.0
offset_bottom = 166.0
script = ExtResource("1_34s8k")

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 112.0
offset_bottom = 167.0
color = Color(1, 1, 0, 1)

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(55, 83)
texture = ExtResource("1_la3s1")
hframes = 8

[node name="Damage" type="Label" parent="Sprite"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = -13.0
offset_top = -87.0
offset_right = -60.0
offset_bottom = -61.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_4rrfw")
theme_override_font_sizes/font_size = 8
text = "00"
vertical_alignment = 2

[node name="Name" type="Label" parent="Sprite"]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -106.0
offset_right = -55.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4rrfw")
theme_override_font_sizes/font_size = 8
text = "arm bar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
